# GitCthulhu

./: Cargo.toml  README.md  index.html  metadata.json  package.json
auth_adapter/: Cargo.toml
auth_adapter/src/: lib.rs
cache_adapter/: Cargo.toml
cache_adapter/src/: lib.rs
config_adapter/: Cargo.toml
config_adapter/src/: lib.rs
core_domain/: Cargo.toml
core_domain/src/: lib.rs
git_adapter/: Cargo.toml
git_adapter/src/: lib.rs
gui_app/: Cargo.toml
gui_app/src/: main.rs
keyring_adapter/: Cargo.toml
keyring_adapter/src/: lib.rs
src/: App.tsx
ssh_adapter/: Cargo.toml
ssh_adapter/src/: lib.rs
